# JNeuralNetwork

./: CMakeLists.txt  README.md
src/: Main.cpp
src/Common/: Assert.h  Logger.h
src/Layer/: Layer.cpp  Layer.h
src/Math/: Matrix.cpp  Matrix.h
src/Network/: NeuralNetowrk.cpp  NeuralNetwork.cpp  NeuralNetwork.h
src/Neuron/: Neuron.cpp  Neuron.h
src/Util/: Logger.h
src/Utils/: RandomUtil.cpp  RandomUtil.h
test/: MatrixTests.cpp  NeuronTests.cpp
test/Math/: MatrixTests.cpp
test/Neuron/: NeuronTests.cpp
